[tool.poetry]
name = "skripsi"
version = "0.1.0"
description = "Alat bantu skripsi berbasis python"
authors = ["hexatester <hexatester@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
pylint = "^2.7.2"
flake8 = "^3.9.0"
black = "^20.8b1"
pre-commit = "^2.11.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
